--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "sass": "^1.81.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.12.0",
     "vite": "^4.0.0"
   }
 }
